--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -15,6 +15,8 @@ jobs:
         platform:
           - linux/amd64
           - linux/arm64
+    permissions:
+      packages: write
     steps:
       - name: Prepare
         run: |
@@ -68,6 +70,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+    permissions:
+      packages: write
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
