--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,9 +3,7 @@ name: build-and-push
 on:
   push:
 
-permissions:
-  contents: read
-  packages: write
+permissions: write-all
 
 env:
   GHCR_REPO: ghcr.io/zgs225/h3c-inode-client
